<resources>
    <string name="app_name">盘点工具</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_account">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_account">帐号无效</string>
    <string name="error_invalid_password">密码长度错误，最小4位</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填字段</string>

    <!-- Strings related to main activity -->
    <string name="main_activity_text_button_get_init_data">获取基础数据</string>
    <string name="main_activity_text_button_inv_list">盘点列表</string>
    <string name="main_activity_text_button_logout">退出登录</string>
    <string name="title_activity_inv_list">盘点列表</string>

    <!-- Strings related to inv list activity -->
    <string name="inv_list_activity_button_text_do_inv">扫码盘点</string>
    <string name="inv_list_activity_button_text_delete">删除盘点数据</string>
    <string name="inv_list_activity_button_text_uninv">未盘商品</string>
    <string name="inv_list_activity_button_text_show">已盘商品</string>
    <string name="title_activity_wh_inv_list">盘点明细</string>
    <string name="title_activity_hs_scan">HsScanActivity</string>
    <string name="hs_scan_activity_text_view_barcode">条码:</string>
    <string name="hs_scan_activity_text_view_sku">商品:</string>
    <string name="hs_scan_activity_text_count">已盘点数量(不含本次)</string>
    <string name="hs_scan_activity_curr_text_count">本次数量</string>
    <string name="hs_scan_activity_curr_text_valid">本次有效期(yyyymmdd)</string>
    <string name="hs_scan_activity_text_valid">已盘点有效期数据</string>

    <string name="button_save_to_db_text">保存</string>


    <string name="text_upload">上传数据</string>
    <string name="title_activity_upload_data">UploadDataActivity</string>
</resources>
