<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/main_activity_button_get_init_data"
        style="@style/ButtonStyle.FillWidth"
        android:text="@string/main_activity_text_button_get_init_data" />

    <Button
        android:id="@+id/main_activity_button_inv_list"
        style="@style/ButtonStyle.FillWidth"
        android:text="@string/main_activity_text_button_inv_list"
        android:layout_below="@id/main_activity_button_get_init_data" />

    <Button
        android:id="@+id/main_activity_button_logout"
        style="@style/ButtonStyle.FillWidth"
        android:text="@string/main_activity_text_button_logout"
        android:layout_below="@id/main_activity_button_inv_list"/>




</RelativeLayout>
