<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.haishang360.inventory.activity.HsScanActivity"
    tools:showIn="@layout/activity_hs_scan">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hs_scan_activity_text_view_barcode_label">

        <AutoCompleteTextView
            android:id="@+id/hs_scan_activity_edit_text_barcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hs_scan_activity_text_view_barcode"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/hs_scan_activity_text_view_barcode_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hs_scan_activity_text_view_sku_label">

        <AutoCompleteTextView
            android:id="@+id/hs_scan_activity_text_view_sku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hs_scan_activity_text_view_sku"
            android:inputType="text"
            android:maxLines="2" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textview_number_input_label"
        android:layout_below="@id/hs_scan_activity_text_view_sku_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_marginTop="20dip"
        android:gravity="right"
        android:textColor="#000"
        android:text="@string/hs_scan_activity_text_count"
        android:textSize="20dp" />
    <TextView
        android:id="@+id/textview_number_input"
        android:layout_width="wrap_content"
        android:minWidth="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dip"
        android:layout_marginRight="0dip"
        android:layout_marginTop="20dip"
        android:background="#cccccc"
        android:gravity="right"
        android:layout_below="@id/hs_scan_activity_text_view_sku_label"
        android:layout_toRightOf="@id/textview_number_input_label"
        android:text="0"
        android:textSize="20dp" />
    <Button
        android:id="@+id/button_save_to_db"
        android:layout_width="wrap_content"
        style="@style/ButtonStyle"
        android:layout_below="@id/hs_scan_activity_text_view_sku_label"
        android:layout_alignParentRight="true"
        android:text="@string/button_save_to_db_text" />


    <android.inputmethodservice.KeyboardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/keyboradview_number_input"
        android:layout_below="@id/textview_number_input"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/image_view_barcode"
        android:layout_width="fill_parent"
        android:scaleType="centerInside"
        android:layout_height="wrap_content"
        android:layout_below="@id/keyboradview_number_input"
        android:minHeight="300dp"
        android:visibility="gone"/>


</RelativeLayout>
